# knol-platform

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  Knol-Deployment-Guide.html  LICENSE  README.md  SECURITY.md  docker-compose.oss.yml  docker-compose.proprietary.yml  docker-compose.stack.yml  docker-compose.yml
.claude/: launch.json
.githooks/: pre-push
brand/: Knol-Brand-Guidelines.docx  brand-guidelines.html
crates/memory-cache/: Cargo.toml
crates/memory-cache/src/: lib.rs
crates/memory-common/: Cargo.toml
crates/memory-common/src/: config.rs  db_config.rs  features.rs  lib.rs  metrics.rs  pii.rs  policy.rs  types.rs
crates/memory-common/tests/: integration.rs
crates/memory-graph/: Cargo.toml
crates/memory-graph/src/: lib.rs
crates/memory-llm/: Cargo.toml
crates/memory-llm/src/: anthropic.rs  cache.rs  conflict.rs  decay.rs  embedding.rs  factory.rs  gemini.rs  guardrails.rs  openai.rs  prompt.rs  provider.rs  types.rs
crates/service-write/: Cargo.toml
crates/service-write/src/: main.rs
deploy/: .env.production.bak  .env.production.example  Caddyfile  Dockerfile.enterprise  Dockerfile.oss  Dockerfile.web  deploy.sh  docker-compose.prod.local.yml  docker-compose.prod.yml  nginx-admin-local.conf  nginx-web.conf  setup-backups.sh  setup-vps.sh  wrangler.admin.toml  wrangler.app.toml  wrangler.demo.toml  wrangler.docs.toml  wrangler.toml
docs/: ARCHITECTURE.html  COMPETITIVE_STRATEGY.html  Knol-Deployment-Guide.html  Knol-Production-Setup-Guide.docx  Knol-Zero-Cost-Marketing-Plan.md  README.md  automated-marketing-strategy.md  cloudflare-sites.md  docker-stack.md  knol-documentation.html  memory-as-a-service-blueprint.md  memory-as-a-service-business-strategy.md  oss-vs-commercial.md  tenant-service-guide.md
frontend/: README.md  package-lock.json  package.json
knol-demo/: README.md  docker-compose.yml  index.html  test_demo.py
knol-docs/: architecture.html  deployment.html
knol-enterprise/: Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  docker-compose.yml  railway.toml
knol-enterprise/crates/enterprise-common/: Cargo.toml
knol-enterprise/crates/enterprise-common/src/: api_rate_limit.rs  audit.rs  client_ip.rs  csrf.rs  lib.rs  password.rs  rate_limit.rs  request_id.rs
knol-enterprise/crates/integration-tests/: Cargo.toml
knol-enterprise/crates/integration-tests/src/: lib.rs
knol-enterprise/crates/service-admin/: Cargo.toml
knol-enterprise/crates/service-admin-panel/: Cargo.toml
knol-enterprise/crates/service-admin-panel/src/: main.rs
knol-enterprise/crates/service-admin/src/: auth.rs  crypto.rs  main.rs
knol-enterprise/crates/service-admin/src/routes/: audit.rs  campaigns.rs  config.rs  credentials.rs  demo.rs  mod.rs  status.rs  tenants.rs  users.rs
knol-enterprise/crates/service-admin/tests/: admin_test.rs
knol-enterprise/crates/service-billing/: Cargo.toml
knol-enterprise/crates/service-billing/src/: main.rs
knol-enterprise/crates/service-billing/tests/: billing_test.rs
knol-enterprise/crates/service-ingest/: Cargo.toml
knol-enterprise/crates/service-ingest/src/: main.rs
knol-enterprise/crates/service-ingest/tests/: ingest_test.rs
knol-enterprise/crates/service-jobs/: Cargo.toml
knol-enterprise/crates/service-jobs/src/: conflict.rs  consolidation.rs  main.rs
knol-enterprise/crates/service-jobs/tests/: jobs_test.rs
knol-enterprise/crates/service-marketing/: Cargo.toml
knol-enterprise/crates/service-marketing/src/: config.rs  config_loader.rs  error.rs  main.rs  rate_limiter.rs  state.rs
knol-enterprise/crates/service-marketing/src/channels/: blog.rs  devto.rs  email.rs  github.rs  hashnode.rs  linkedin.rs  medium.rs  mod.rs  producthunt.rs  reddit.rs  twitter.rs
knol-enterprise/crates/service-marketing/src/content/: generator.rs  mod.rs  templates.rs
knol-enterprise/crates/service-marketing/src/routes/: health.rs  mod.rs  preview.rs  status.rs  trigger.rs
knol-enterprise/crates/service-marketing/src/scheduler/: campaigns.rs
knol-enterprise/crates/service-tenant/: Cargo.toml
knol-enterprise/crates/service-tenant/src/: auth.rs  lib.rs  main.rs  openapi.rs  stripe.rs
knol-enterprise/crates/service-tenant/src/routes/: app.rs  billing.rs  invites.rs  mod.rs  settings.rs  totp.rs
knol-enterprise/crates/service-tenant/tests/: tenant_api_test.rs
knol-enterprise/migrations/: 006_baseline.sql  015_saas_app_auth.sql  016_tenant_audit.sql  017_stripe_billing_invites.sql  018_security_hardening.sql  019_features_hardening.sql
knol-enterprise/migrations/legacy/: 006_audit_policies.sql  007_consolidation.sql  008_marketing.sql  009_admin_panel.sql  010_grounding.sql  011_env_consolidation.sql  012_llm_optimization.sql  013_competitive_features.sql  014_remove_plaintext_sensitive_config.sql
knol-enterprise/tests/: integration_test.rs
knol-oss/crates/memory-cache/: Cargo.toml
knol-oss/crates/memory-cache/src/: lib.rs
knol-oss/crates/memory-queue/: Cargo.toml
knol-oss/crates/memory-queue/src/: lib.rs
knol-oss/crates/service-gateway/: Cargo.toml
knol-oss/crates/service-gateway/src/: crypto.rs  main.rs  state.rs
knol-oss/crates/service-graph/: Cargo.toml
knol-oss/crates/service-graph/src/: main.rs
knol-oss/crates/service-retrieve/: Cargo.toml
knol-oss/crates/service-retrieve/src/: main.rs
knol-oss/crates/service-retrieve/tests/: rrf_test.rs
knol-oss/sdk/python/: pyproject.toml
knol-oss/sdk/python/memory_sdk/: async_client.py  client.py
knol-oss/sdk/python/memory_sdk/integrations/: crewai.py  langchain.py
knol-oss/sdk/python/tests/: test_client.py
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: harness.rs  main.rs  tenant_helpers.rs  test_admin.rs  test_billing.rs  test_cross_service.rs  test_deploy.rs  test_gateway.rs  test_graph.rs  test_graph_api.rs  test_ingest.rs  test_jobs.rs  test_memory_crud.rs  test_retrieve.rs  test_session_management.rs  test_signup_flow.rs  test_team_invites.rs  test_tenant_settings.rs  test_user_management.rs  test_webhooks.rs  test_write.rs
(+359 files in other folders)
