[workspace]
resolver = "2"
members = [
    "crates/memory-common",
    "crates/memory-db",
    "crates/memory-cache",
    "crates/memory-queue",
    "crates/memory-llm",
    "crates/memory-vector",
    "crates/memory-graph",
    "crates/service-gateway",
    "crates/service-write",
    "crates/service-retrieve",
    "crates/service-graph",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/aiknol/knol"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }
hyper = { version = "1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Redis
fred = { version = "9", features = ["enable-rustls"] }

# NATS
async-nats = "0.35"

# HTTP client (for Anthropic API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Auth
jsonwebtoken = "9"

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
envy = "0.4"

# Error handling
thiserror = "1"
anyhow = "1"

# Crypto
sha2 = "0.10"
hex = "0.4"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# PII detection
regex = "1"

# Internal crates
memory-common = { path = "crates/memory-common" }
memory-db = { path = "crates/memory-db" }
memory-cache = { path = "crates/memory-cache" }
memory-queue = { path = "crates/memory-queue" }
memory-llm = { path = "crates/memory-llm" }
memory-vector = { path = "crates/memory-vector" }
memory-graph = { path = "crates/memory-graph" }
