[workspace]
resolver = "2"
members = [
    "crates/service-admin-panel",
    "crates/service-admin",
    "crates/service-jobs",
    "crates/service-billing",
    "crates/service-ingest",
    "crates/service-marketing",
    "crates/integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# NATS
async-nats = "0.35"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Identifiers & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Scheduling
tokio-cron-scheduler = "0.10"

# OSS crates (path dependencies to knol-oss)
memory-common = { path = "../knol-oss/crates/memory-common" }
memory-db = { path = "../knol-oss/crates/memory-db" }
memory-llm = { path = "../knol-oss/crates/memory-llm" }
memory-queue = { path = "../knol-oss/crates/memory-queue" }
