[package]
name = "memory-cache"
version.workspace = true
edition.workspace = true

[dependencies]
memory-common.workspace = true
fred.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
