[package]
name = "memory-graph"
version.workspace = true
edition.workspace = true

[dependencies]
memory-common.workspace = true
memory-db.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
