[package]
name = "memory-llm"
version.workspace = true
edition.workspace = true

[dependencies]
memory-common.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
memory-cache.workspace = true
fred.workspace = true
async-trait = "0.1"
secrecy.workspace = true
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
