[package]
name = "knol-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false
autobenches = false
autobins = false
autotests = false

# Single test binary including all modules
[[test]]
name = "e2e"
path = "tests/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
