[package]
name = "service-admin-panel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "admin-panel-service"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
tower-http = { version = "0.5", features = ["cors"] }
