[package]
name = "service-admin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "admin-service"
path = "src/main.rs"

[dependencies]
memory-common.workspace = true
memory-db.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
reqwest.workspace = true
# Admin panel deps
jsonwebtoken = "9"
bcrypt = "0.16"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.4", features = ["util"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
http = "1"
