[package]
name = "memory-queue"
version.workspace = true
edition.workspace = true

[dependencies]
memory-common.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
