[package]
name = "service-retrieve"
version.workspace = true
edition.workspace = true

[[bin]]
name = "retrieve-service"
path = "src/main.rs"

[dependencies]
memory-common.workspace = true
memory-db.workspace = true
memory-vector.workspace = true
memory-graph.workspace = true
memory-cache.workspace = true
memory-llm.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sqlx.workspace = true
fred.workspace = true
