[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-sdk"
version = "0.1.0"
description = "Python SDK for Memory Infrastructure API"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
async = ["httpx[http2]>=0.25"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.30",
]
